--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>GHM Contenidos</title>
+	<link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
 	
