Empiezo con el slideshow

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>GHM Contenidos</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
 	<header class="container-fluid">
@@ -234,6 +235,66 @@
 			</div>
 		</nav>
 	</header>
+
+
+
+
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-12 slide-lp">
+			<div class="carousel slide" id="secondary-carousel" data-ride="carousel">
+				<div class="carousel-inner">
+
+					<div class="carousel-item active">
+						<div class="carousel-caption d-block">
+							<h4>¿Titulo de la Imagen 1?</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, possimus!</p>
+						</div>
+						<img src="img/slide1.jpg" alt="">
+					</div>
+
+					<div class="carousel-item">
+						<div class="carousel-caption d-block">
+							<h4>¿Titulo de la Imagen 2?</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, possimus!</p>
+						</div>
+						<img src="img/slide2.jpg" alt="">
+					</div>
+
+					<div class="carousel-item">
+						<div class="carousel-caption d-block">
+							<h4>¿Titulo de la Imagen?</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, possimus!</p>
+						</div>
+						<img src="img/slide3.jpg" alt="">
+					</div>
+
+				</div>
+	
+				<a href="#secondary-carousel" class="carousel-control-prev" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Anterior</span>
+				</a>
+	
+				<a href="#secondary-carousel" class="carousel-control-next" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Siguiente</span>
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
+
 
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/popper.min.js"></script>
