INDEX: Agrego sección intro

--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
 		</div>
 	</div>
 
+	<div class="container intro">
+		<div class="row justify-content-center">
+			<div class="col-10 text-center">
+				<h1 class="titulo">Creatividad, profesionalismo y trayectoria</h1>
+				<p class="texto">Fundada en 1993, GHM Contenidos es una productora versátil y dinámica, capaz de materializar los desafíos más osados. Desde nuestras oficinas en plena Cordillera de los Andes, proveemos servicios de publicidad, imagen corporativa, diseño integral, monitoreo y vuelos con drone o helicóptero a clientes de Argentina y Latinoamérica. Nuestra experiencia y trayectoria nos permite trabajar en campañas integrales, coproducciones y contrataciones particulares, ofreciendo como valor agregado creatividad, tecnología, conocimiento, sistematización y comprensión integral de la comunicación institucional, realización audiovisual, editorial y stands.</p>
+			</div>
+		</div>
+	</div>
 
 
 
