INDEX: Agrego sección Huevo

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	</header>
 
 	<!-- Slide -->
-	<div class="container-fluid">
+	<section class="container-fluid">
 		<div class="row">
 			<div class="col-12 slide-lp">
 				<div class="carousel slide" id="secondary-carousel" data-ride="carousel">
@@ -113,16 +113,38 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 
-	<div class="container intro">
+	<!-- Intro -->
+	<section class="container intro">
 		<div class="row justify-content-center">
 			<div class="col-10 text-center">
 				<h1 class="titulo">Creatividad, profesionalismo y trayectoria</h1>
 				<p class="texto">Fundada en 1993, GHM Contenidos es una productora versátil y dinámica, capaz de materializar los desafíos más osados. Desde nuestras oficinas en plena Cordillera de los Andes, proveemos servicios de publicidad, imagen corporativa, diseño integral, monitoreo y vuelos con drone o helicóptero a clientes de Argentina y Latinoamérica. Nuestra experiencia y trayectoria nos permite trabajar en campañas integrales, coproducciones y contrataciones particulares, ofreciendo como valor agregado creatividad, tecnología, conocimiento, sistematización y comprensión integral de la comunicación institucional, realización audiovisual, editorial y stands.</p>
 			</div>
 		</div>
-	</div>
+	</section>
+
+	<!-- Huevo -->
+	<section class="huevo">
+		<div class="container">
+			<div class="row justify-content-center align-items-center">
+				<div class="col-4">
+					<img src="img/avatarG.png" alt="Guestavo Huevo Muñoz">
+				</div>
+				<div class="col-1"></div>
+				<div class="col-5">
+					<h2 class="titulo">Gustavo Muñoz Lorenzo</h2>
+					<p class="texto">Dirección General</p>
+					<a href="#" class="btn-default">
+						<span class="icon-chevron-thin-right"></span>
+						Ver biografía
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
 
 
 
