INDEX: arreglo ajustes de responsive

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	<!-- Intro -->
 	<section class="container intro">
 		<div class="row justify-content-center">
-			<div class="col-10 text-center">
+			<div class="col-12 col-lg-10 text-center">
 				<h1 class="titulo">Creatividad, profesionalismo y trayectoria</h1>
 				<p class="texto">Fundada en 1993, GHM Contenidos es una productora versátil y dinámica, capaz de materializar los desafíos más osados. Desde nuestras oficinas en plena Cordillera de los Andes, proveemos servicios de publicidad, imagen corporativa, diseño integral, monitoreo y vuelos con drone o helicóptero a clientes de Argentina y Latinoamérica. Nuestra experiencia y trayectoria nos permite trabajar en campañas integrales, coproducciones y contrataciones particulares, ofreciendo como valor agregado creatividad, tecnología, conocimiento, sistematización y comprensión integral de la comunicación institucional, realización audiovisual, editorial y stands.</p>
 			</div>
@@ -129,11 +129,11 @@
 	<section class="huevo">
 		<div class="container">
 			<div class="row justify-content-center align-items-center">
-				<div class="col-4">
-					<img src="img/avatarG.png" alt="Guestavo Huevo Muñoz">
+				<div class="col-12 col-lg-4">
+					<img src="img/avatarG.png" class="img-fluid" alt="Guestavo Huevo Muñoz">
 				</div>
-				<div class="col-1"></div>
-				<div class="col-5">
+				<div class="d-none d-lg-block col-1"></div>
+				<div class="col-12 col-lg-5">
 					<h2 class="titulo">Gustavo Muñoz Lorenzo</h2>
 					<p class="texto">Dirección General</p>
 					<a href="#" class="btn-default">
