INDEX: Agrego sección equipo

--- a/index.html
+++ b/index.html
@@ -145,7 +145,101 @@
 		</div>
 	</section>
 
+	<!-- Equipo -->
+	<section class="container equipo">
 
+		<div class="row justify-content-center">
+			<div class="col-12 col-lg-8 text-center">
+				<h2 class="titulo">Nuestro equipo</h2>
+				<p class="texto">La colaboración es la base de la creatividad. Por eso cada proyecto es abordado interdisciplinarmente. Nuestro equipo de trabajo está integrado por profesionales expertos en cada área, que confluyen en el proceso creativo aportando sus habilidades. Cada producto entregado es el resultado de esta cooperación y sinergia creativa.</p>
+			</div>
+		</div>
+
+		<div class="row justify-content-center">
+
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Gustavo</h3>
+						<p class="texto-equipo">Director general</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Gabriela</h3>
+						<p class="texto-equipo">Directora creativa</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Valentín</h3>
+						<p class="texto-equipo">Equipo de diseño</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Belén</h3>
+						<p class="texto-equipo">Equipo de diseño</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Analía</h3>
+						<p class="texto-equipo">Equipo de diseño</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Guillermina</h3>
+						<p class="texto-equipo">Equipo de diseño</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Mercedes</h3>
+						<p class="texto-equipo">Equipo de diseño</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Matías</h3>
+						<p class="texto-equipo">Equipo de animación</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Katharina</h3>
+						<p class="texto-equipo">Equipo de administración</p>
+					</figcaption>
+				</figure>
+			</div>
+		</div>
+	</section>
 
 
 
