INDEX: Agrego sección Clientes

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<img src="img/avatarG.png" class="img-fluid" alt="Guestavo Huevo Muñoz">
 				</div>
 				<div class="d-none d-lg-block col-1"></div>
-				<div class="col-12 col-lg-5">
+				<div class="col-12 col-lg-5 text-center">
 					<h2 class="titulo">Gustavo Muñoz Lorenzo</h2>
 					<p class="texto">Dirección General</p>
 					<a href="#" class="btn-default">
@@ -156,7 +156,6 @@
 		</div>
 
 		<div class="row justify-content-center">
-
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
 					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
@@ -237,6 +236,112 @@
 						<p class="texto-equipo">Equipo de administración</p>
 					</figcaption>
 				</figure>
+			</div>
+		</div>
+	</section>
+
+	<!-- Clientes -->
+	<section class="container clientes">
+		<div class="row justify-content-center align-items-center">
+			<div class="col-12 text-center">
+				<h2 class="titulo">Clientes</h2>
+			</div>
+
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso1.png" class="img-fluid" alt="Presidencia de la Nación">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso2.png" class="img-fluid" alt="YPF">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso3.png" class="img-fluid" alt="Techint">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso4.png" class="img-fluid" alt="Tenaris">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso5.png" class="img-fluid" alt="Barrick Gold">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso6.png" class="img-fluid" alt="Panedile">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso7.png" class="img-fluid" alt="Troy Resources Argentina">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso8.png" class="img-fluid" alt="360 Energy">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso9.png" class="img-fluid" alt="McKinsey & Company">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso10.png" class="img-fluid" alt="Ford">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso11.png" class="img-fluid" alt="Toyota">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso12.png" class="img-fluid" alt="Antofagasta Minerals">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso13.png" class="img-fluid" alt="Gobierno de San Juan">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso14.png" class="img-fluid" alt="Vialidad Nacional">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso15.png" class="img-fluid" alt="Gobierno de Chile">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso16.png" class="img-fluid" alt="El Trece">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso17.png" class="img-fluid" alt="Grupo Phronesis">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso18.png" class="img-fluid" alt="Petersen, Thiele y Cruz">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso19.png" class="img-fluid" alt="Fundaciones Grupo Petersen">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso20.png" class="img-fluid" alt="Banco San Juan">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso21.png" class="img-fluid" alt="Funación Banco San Juan">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso22.png" class="img-fluid" alt="Funación Banco Santa Fe">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso23.png" class="img-fluid" alt="Funación Banco Entre Rios">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso24.png" class="img-fluid" alt="Funación Banco Santa Cruz">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso25.png" class="img-fluid" alt="Bodegas Bórbore">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso26.png" class="img-fluid" alt="Tekno Food">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso27.png" class="img-fluid" alt="Olivita">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso28.png" class="img-fluid" alt="Conduciendo Bien">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso29.png" class="img-fluid" alt="Instituto Cervantes">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso30.png" class="img-fluid" alt="Saul Saidel">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso31.png" class="img-fluid" alt="Teatro del Bicentenario">
+			</div>
+			<div class="col-4 col-lg-3">
+				<img src="img/Recurso32.png" class="img-fluid" alt="MPBA Franklin Rawson">
 			</div>
 		</div>
 	</section>
