INDEX: Ya ni se que estoy haciendo

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		</nav>
 	</header>
 
-	<!-- Slide -->
+	<!-- Slider -->
 	<section class="container-fluid">
 		<div class="row">
 			<div class="col-12 slide-lp">
@@ -133,7 +133,7 @@
 					<img src="img/avatarG.png" class="img-fluid" alt="Guestavo Huevo Muñoz">
 				</div>
 				<div class="d-none d-lg-block col-1"></div>
-				<div class="col-12 col-lg-5 text-center">
+				<div class="col-12 col-lg-5">
 					<h2 class="titulo">Gustavo Muñoz Lorenzo</h2>
 					<p class="texto">Dirección General</p>
 					<a href="#" class="btn-default">
@@ -346,11 +346,131 @@
 		</div>
 	</section>
 
+	<!-- Contacto  -->
+	<section class="contacto">
+		<div class="container">
+			<div class="row">
+				<div class="col-12 text-center">
+					<h2 class="titulo">Contacto</h2>
+				</div>
+				<div class="col-12 text-center">
+					<p class="texto">Esteban Echeverría 772 Sur (5400) | San Juan · Argentina</p>
+				</div>
+				<div class="col-12 text-center">
+					<p class="texto">
+						<span class="icon-phone"></span>
+						+ 54 264 4266621 · 4085014
+					</p>
+				</div>
+				<div class="col-12 text-center">
+					<p class="texto">
+						<span class="icon-mouse"></span>
+						ghmtv@ghmtv.com | 
+						<a href="https://www.youtube.com/channel/UC1i1fEIsMjAJA5peqehEHiw" target="_blank"><span class="icon-youtube"></span></a>
+						<a href="https://www.facebook.com/Ghmtv/" target="_blank"><span class="icon-facebook"></span></a>
+						<a href="#"><span class="icon-instagram"></span></a>
+					</p>
+				</div>
+				<div class="col-12 text-center">
+					<a href="#" class="btn-default">
+						<span class="icon-chevron-thin-right"></span>
+						Enviar mail
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
 
+	<!-- Mapa -->
+	<iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3400.501456166583!2d-68.5625626852397!3d-31.537849981363834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9681404df64be35f%3A0x2d3fc6fb19bffb93!2sghm+contenidos!5e0!3m2!1ses-419!2sar!4v1510436185485" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-
-
-
+	<!-- Footer -->
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-1"></div>
+				<div class="col-2">
+					<h6 class="titulo-footer">Home</h6>
+					<ul class="lista-footer">
+						<li class="item-footer"><a href=""></a>Acerca de GHM</li>
+						<li class="item-footer"><a href=""></a>Gustavo Muñoz Lorenzo</li>
+						<li class="item-footer"><a href=""></a>Equipo</li>
+						<li class="item-footer"><a href=""></a>Clientes</li>
+						<li class="item-footer"><a href=""></a>Noticias</li>
+						<li class="item-footer"><a href=""></a>Contacto</li>
+					</ul>
+					<h6 class="titulo-footer">Audiovisual</h6>
+					<ul class="lista-footer">
+						<li class="item-footer">Institucional</li>
+						<li class="item-footer">Insfraestructura</li>
+						<li class="item-footer">Educativo</li>
+						<li class="item-footer">Publicitario</li>
+						<li class="item-footer">Mapping</li>
+					</ul>
+				</div>
+				<div class="col-1"></div>
+				<div class="col-2">
+					<h6 class="titulo-footer">Home</h6>
+					<ul class="lista-footer">
+						<li class="item-footer"><a href=""></a>Acerca de GHM</li>
+						<li class="item-footer"><a href=""></a>Gustavo Muñoz Lorenzo</li>
+						<li class="item-footer"><a href=""></a>Equipo</li>
+						<li class="item-footer"><a href=""></a>Clientes</li>
+						<li class="item-footer"><a href=""></a>Noticias</li>
+						<li class="item-footer"><a href=""></a>Contacto</li>
+					</ul>
+					<h6 class="titulo-footer">Audiovisual</h6>
+					<ul class="lista-footer">
+						<li class="item-footer">Institucional</li>
+						<li class="item-footer">Insfraestructura</li>
+						<li class="item-footer">Educativo</li>
+						<li class="item-footer">Publicitario</li>
+						<li class="item-footer">Mapping</li>
+					</ul>
+				</div>
+				<div class="col-1"></div>
+				<div class="col-2">
+					<h6 class="titulo-footer">Home</h6>
+					<ul class="lista-footer">
+						<li class="item-footer"><a href=""></a>Acerca de GHM</li>
+						<li class="item-footer"><a href=""></a>Gustavo Muñoz Lorenzo</li>
+						<li class="item-footer"><a href=""></a>Equipo</li>
+						<li class="item-footer"><a href=""></a>Clientes</li>
+						<li class="item-footer"><a href=""></a>Noticias</li>
+						<li class="item-footer"><a href=""></a>Contacto</li>
+					</ul>
+					<h6 class="titulo-footer">Audiovisual</h6>
+					<ul class="lista-footer">
+						<li class="item-footer">Institucional</li>
+						<li class="item-footer">Insfraestructura</li>
+						<li class="item-footer">Educativo</li>
+						<li class="item-footer">Publicitario</li>
+						<li class="item-footer">Mapping</li>
+					</ul>
+				</div>
+				<div class="col-1"></div>
+				<div class="col-2">
+					<h6 class="titulo-footer">Home</h6>
+					<ul class="lista-footer">
+						<li class="item-footer"><a href=""></a>Acerca de GHM</li>
+						<li class="item-footer"><a href=""></a>Gustavo Muñoz Lorenzo</li>
+						<li class="item-footer"><a href=""></a>Equipo</li>
+						<li class="item-footer"><a href=""></a>Clientes</li>
+						<li class="item-footer"><a href=""></a>Noticias</li>
+						<li class="item-footer"><a href=""></a>Contacto</li>
+					</ul>
+					<h6 class="titulo-footer">Audiovisual</h6>
+					<ul class="lista-footer">
+						<li class="item-footer">Institucional</li>
+						<li class="item-footer">Insfraestructura</li>
+						<li class="item-footer">Educativo</li>
+						<li class="item-footer">Publicitario</li>
+						<li class="item-footer">Mapping</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
 
