FOOTER: Contrsuyo footer

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 						<li class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" id="navBarAudiovisual" data-toggle="dropdown" role="button">AUDIOVISUAL</a>
 							<div class="dropdown-menu" aria-labelledby="navBarAudiovisual">
-					        	<a class="dropdown-item" href="#">Opción1</a>
-					        	<a class="dropdown-item" href="#">Opción2</a>
-					        	<a class="dropdown-item" href="#">Opción3</a>
+					        	<a class="dropdown-item" href="#.">Institucional</a>
+					        	<a class="dropdown-item" href="#.">Infraestructura</a>
+					        	<a class="dropdown-item" href="#.">Educativo</a>
+					        	<a class="dropdown-item" href="#.">Publicitario</a>
+					        	<a class="dropdown-item" href="#.">Mappig</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
@@ -44,22 +46,39 @@
 							<div class="dropdown-menu" aria-labelledby="navBarFotografia">
 					        	<a class="dropdown-item" href="#">Naturaleza</a>
 					        	<a class="dropdown-item" href="#">Institucional</a>
-					        	<a class="dropdown-item" href="#">Opción3</a>
+					        	<a class="dropdown-item" href="#">Infraestructura</a>
+					        	<a class="dropdown-item" href="#">Artístico</a>
+					        	<a class="dropdown-item" href="#">Extremo</a>
+					        	<a class="dropdown-item" href="#">Publicitaria</a>
+					        	<a class="dropdown-item" href="#">Retrato</a>
+					        	<a class="dropdown-item" href="#">Producciones en estudio</a>
 					        </div>
-
-
 						</li>
-						<li class="nav-item">
-							<a href="#" class="nav-link">DISEÑO</a>
+						<li class="nav-item dropdown">
+							<a href="#" class="nav-link dropdown-toggle" id="navBarDiseño" data-toggle="dropdown" role="button">DISEÑO</a>
+							<div class="dropdown-menu" aria-labelledby="navBarDiseño">
+					        	<a class="dropdown-item" href="#">Gráfica</a>
+					        	<a class="dropdown-item" href="#">Editorial</a>
+					        	<a class="dropdown-item" href="#">Digital</a>
+					        </div>
 						</li>
-						<li class="nav-item">
-							<a href="#" class="nav-link">ESPACIOS</a>
+						<li class="nav-item dropdown">
+							<a href="#" class="nav-link" dropdown-toggle" id="navBarEspacios" data-toggle="dropdown" role="button">ESPACIOS</a>
+							<div class="dropdown-menu" aria-labelledby="navBarEspacios">
+					        	<a class="dropdown-item" href="#">Stand</a>
+					        	<a class="dropdown-item" href="#">Arquigrafía</a>
+					        	<a class="dropdown-item" href="#">Exposiciones</a>
+					        </div>
 						</li>
 						<li class="nav-item">
 							<a href="#" class="nav-link">MONITOREO</a>
 						</li>
-						<li class="nav-item">
-							<a href="#" class="nav-link">VUELOS</a>
+						<li class="nav-item dropdown">
+							<a href="#" class="nav-link dropdown-toggle" id="navBarVuelos" data-toggle="dropdown" role="button"">VUELOS</a>
+							<div class="dropdown-menu ultimo" aria-labelledby="navBarVuelos">
+					        	<a class="dropdown-item" href="#">Drone</a>
+					        	<a class="dropdown-item" href="#">Helicóptero</a>
+					        </div>
 						</li>
 					</ul>
 				</div>
@@ -76,31 +95,45 @@
 					<div class="carousel-inner">
 
 						<div class="carousel-item active">
+							<!-- TITULO DELA IMAGEN 1	
+
 							<div class="carousel-caption d-block">
 								<h4>¿Título de la Imagen 1?</h4>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, possimus!</p>
 							</div>
+
+							-->
 							<img src="img/slide1.jpg" alt="">
 						</div>
 
 						<div class="carousel-item">
+							<!-- TITULO DELA IMAGEN 2
+
 							<div class="carousel-caption d-block">
 								<h4>¿Título de la Imagen 2?</h4>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, possimus!</p>
 							</div>
+
+							-->
 							<img src="img/slide2.jpg" alt="">
 						</div>
 
 						<div class="carousel-item">
-							<div class="carousel-caption d-block">
+							<!-- TITULO DELA IMAGEN 3
+
+	 						<div class="carousel-caption d-block">
 								<h4>¿Título de la Imagen 3?</h4>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, possimus!</p>
 							</div>
+
+							-->
 							<img src="img/slide3.jpg" alt="">
 						</div>
 
 					</div>
-		
+					
+					<!--  Estas son las flechas de Next y Prevs
+
 					<a href="#secondary-carousel" class="carousel-control-prev" data-slide="prev">
 						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 						<span class="sr-only">Anterior</span>
@@ -110,6 +143,8 @@
 						<span class="carousel-control-next-icon" aria-hidden="true"></span>
 						<span class="sr-only">Siguiente</span>
 					</a>
+
+					-->
 				</div>
 			</div>
 		</div>
@@ -365,7 +400,7 @@
 				<div class="col-12 text-center">
 					<p class="texto">
 						<span class="icon-mouse"></span>
-						ghmtv@ghmtv.com | 
+						<a href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a> | 
 						<a href="https://www.youtube.com/channel/UC1i1fEIsMjAJA5peqehEHiw" target="_blank"><span class="icon-youtube"></span></a>
 						<a href="https://www.facebook.com/Ghmtv/" target="_blank"><span class="icon-facebook"></span></a>
 						<a href="#"><span class="icon-instagram"></span></a>
@@ -387,86 +422,83 @@
 	<!-- Footer -->
 	<footer>
 		<div class="container">
+			<div class="row justify-content-center">
+				<div class="d-12 col-md-6 col-lg-3 class-aux">
+					<h6 class="titulo-footer">Home</h6>
+					<ul class="lista-footer">
+						<li><a class="item-footer" href="#.">Acerca de GHM</a></li>
+						<li><a class="item-footer" href="#.">Gustavo Muñoz Lorenzo</a></li>
+						<li><a class="item-footer" href="#.">Equipo</a></li>
+						<li><a class="item-footer" href="#.">Clientes</a></li>
+						<li><a class="item-footer" href="#.">Noticias</a></li>
+						<li><a class="item-footer" href="#.">Contacto</a></li>
+					</ul>
+					<h6 class="titulo-footer">Audiovisual</h6>
+					<ul class="lista-footer">
+						<li class="item-footer"><a href="#." class="item-footer">Institucional</a></li>
+						<li class="item-footer"><a href="#." class="item-footer">Infraestructura</a></li>
+						<li class="item-footer"><a href="#." class="item-footer">Educativo</a></li>
+						<li class="item-footer"><a href="#." class="item-footer">Publicitario</a></li>
+						<li class="item-footer"><a href="#." class="item-footer">Mapping</a></li>
+					</ul>
+				</div>
+				<div class="d-12 col-md-6 col-lg-3 class-aux">
+					<h6 class="titulo-footer">Fotografía</h6>
+					<ul class="lista-footer">
+						<li><a class="item-footer" href="#.">Naturaleza</a></li>
+						<li><a class="item-footer" href="#.">Institucional</a></li>
+						<li><a class="item-footer" href="#.">Infraestructura</a></li>
+						<li><a class="item-footer" href="#.">Artístico</a></li>
+						<li><a class="item-footer" href="#.">Extremo</a></li>
+						<li><a class="item-footer" href="#.">Publicitaria</a></li>
+						<li><a class="item-footer" href="#.">Retrato</a></li>
+						<li><a class="item-footer" href="#.">Producciones en estudio</a></li>
+					</ul>
+					<h6 class="titulo-footer">Diseño</h6>
+					<ul class="lista-footer">
+						<li class="item-footer"><a href="#." class="item-footer">Gráfica</a></li>
+						<li class="item-footer"><a href="#." class="item-footer">Editorial</a></li>
+						<li class="item-footer"><a href="#." class="item-footer">Digital</a></li>
+					</ul>
+				</div>
+				<div class="d-12 col-md-6 col-lg-3 class-aux">
+					<h6 class="titulo-footer">Espacios</h6>
+					<ul class="lista-footer">
+						<li><a class="item-footer" href="#.">Stand</a></li>
+						<li><a class="item-footer" href="#.">Arquigrafía</a></li>
+						<li><a class="item-footer" href="#.">Exposiciones</a></li>
+					</ul>
+					<h6 class="titulo-footer">Monitoreo</h6>
+					<ul class="lista-footer">
+					</ul>
+					<h6 class="titulo-footer">Vuelos</h6>
+					<ul class="lista-footer">
+						<li><a class="item-footer" href="#.">Drone</a></li>
+						<li><a class="item-footer" href="#.">Helicóptero</a></li>
+					</ul>
+				</div>
+				<div class="d-12 col-md-6 col-lg-3 class-aux">
+					<h6 class="titulo-footer">Nuestra oficina</h6>
+					<ul class="lista-footer">
+						<li class="item-footer">Esteban Echeverría 772 Sur (5400)</li>
+						<li class="item-footer">San Juan · Argentina</li>
+						<li class="item-footer">+54 264 4266621 | 4085014</li>
+						<li><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
+					</ul>
+					<ul class="lista-footer redes">
+						<a href="https://www.youtube.com/channel/UC1i1fEIsMjAJA5peqehEHiw" target="_blank"><span class="icon-youtube"></span></a>
+						<a href="https://www.facebook.com/Ghmtv/" target="_blank"><span class="icon-facebook"></span></a>
+						<a href="#"><span class="icon-instagram"></span></a>
+					</ul>
+					<h6 class="titulo-footer">Trabajá con nosotros</h6>
+					<ul class="lista-footer">
+						<li><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
+					</ul>
+				</div>
+			</div>
 			<div class="row">
-				<div class="col-1"></div>
-				<div class="col-2">
-					<h6 class="titulo-footer">Home</h6>
-					<ul class="lista-footer">
-						<li class="item-footer"><a href=""></a>Acerca de GHM</li>
-						<li class="item-footer"><a href=""></a>Gustavo Muñoz Lorenzo</li>
-						<li class="item-footer"><a href=""></a>Equipo</li>
-						<li class="item-footer"><a href=""></a>Clientes</li>
-						<li class="item-footer"><a href=""></a>Noticias</li>
-						<li class="item-footer"><a href=""></a>Contacto</li>
-					</ul>
-					<h6 class="titulo-footer">Audiovisual</h6>
-					<ul class="lista-footer">
-						<li class="item-footer">Institucional</li>
-						<li class="item-footer">Insfraestructura</li>
-						<li class="item-footer">Educativo</li>
-						<li class="item-footer">Publicitario</li>
-						<li class="item-footer">Mapping</li>
-					</ul>
-				</div>
-				<div class="col-1"></div>
-				<div class="col-2">
-					<h6 class="titulo-footer">Home</h6>
-					<ul class="lista-footer">
-						<li class="item-footer"><a href=""></a>Acerca de GHM</li>
-						<li class="item-footer"><a href=""></a>Gustavo Muñoz Lorenzo</li>
-						<li class="item-footer"><a href=""></a>Equipo</li>
-						<li class="item-footer"><a href=""></a>Clientes</li>
-						<li class="item-footer"><a href=""></a>Noticias</li>
-						<li class="item-footer"><a href=""></a>Contacto</li>
-					</ul>
-					<h6 class="titulo-footer">Audiovisual</h6>
-					<ul class="lista-footer">
-						<li class="item-footer">Institucional</li>
-						<li class="item-footer">Insfraestructura</li>
-						<li class="item-footer">Educativo</li>
-						<li class="item-footer">Publicitario</li>
-						<li class="item-footer">Mapping</li>
-					</ul>
-				</div>
-				<div class="col-1"></div>
-				<div class="col-2">
-					<h6 class="titulo-footer">Home</h6>
-					<ul class="lista-footer">
-						<li class="item-footer"><a href=""></a>Acerca de GHM</li>
-						<li class="item-footer"><a href=""></a>Gustavo Muñoz Lorenzo</li>
-						<li class="item-footer"><a href=""></a>Equipo</li>
-						<li class="item-footer"><a href=""></a>Clientes</li>
-						<li class="item-footer"><a href=""></a>Noticias</li>
-						<li class="item-footer"><a href=""></a>Contacto</li>
-					</ul>
-					<h6 class="titulo-footer">Audiovisual</h6>
-					<ul class="lista-footer">
-						<li class="item-footer">Institucional</li>
-						<li class="item-footer">Insfraestructura</li>
-						<li class="item-footer">Educativo</li>
-						<li class="item-footer">Publicitario</li>
-						<li class="item-footer">Mapping</li>
-					</ul>
-				</div>
-				<div class="col-1"></div>
-				<div class="col-2">
-					<h6 class="titulo-footer">Home</h6>
-					<ul class="lista-footer">
-						<li class="item-footer"><a href=""></a>Acerca de GHM</li>
-						<li class="item-footer"><a href=""></a>Gustavo Muñoz Lorenzo</li>
-						<li class="item-footer"><a href=""></a>Equipo</li>
-						<li class="item-footer"><a href=""></a>Clientes</li>
-						<li class="item-footer"><a href=""></a>Noticias</li>
-						<li class="item-footer"><a href=""></a>Contacto</li>
-					</ul>
-					<h6 class="titulo-footer">Audiovisual</h6>
-					<ul class="lista-footer">
-						<li class="item-footer">Institucional</li>
-						<li class="item-footer">Insfraestructura</li>
-						<li class="item-footer">Educativo</li>
-						<li class="item-footer">Publicitario</li>
-						<li class="item-footer">Mapping</li>
-					</ul>
+				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
+					<img src="img/ghmLogoFooter.png" alt="GHM Contenidos" class="img">
 				</div>
 			</div>
 		</div>
