--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 				
 				<!-- Logo de GHM -->
 				<a class="ghmLogo" href="#">
-					<img src="img/ghmLogo1.png">
+					<span class="icon-logo"></span>
+					<!-- <img src="img/ghmLogo1.png"> -->
 				</a>
 				<!-- Fin de Logo -->
 					
@@ -149,6 +150,23 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- Videos -->
+	<section class="videos">
+		<div class="video1">
+			<img src="img/video.png" class="img-fluid">
+		</div>
+		<div class="video2">
+			<img src="img/video.png" class="img-fluid">
+		</div>
+		<div class="video3">
+			<img src="img/video.png" class="img-fluid">
+		</div>
+		<div class="video4">
+			<img src="img/video.png" class="img-fluid">
+		</div>
+	</section>
+	<div class="clear"></div>
 
 	<!-- Intro -->
 	<section class="container intro">
@@ -498,7 +516,8 @@
 			</div>
 			<div class="row">
 				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
-					<img src="img/ghmLogoFooter.png" alt="GHM Contenidos" class="img">
+					<!-- <img src="img/ghmLogoFooter.png" alt="GHM Contenidos" class="img"> -->
+					<a href="#"><span class="icon-logoHuevo"></span></a>
 				</div>
 			</div>
 		</div>
