--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
+	<!-- Header -->
 	<header class="container-fluid">
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
@@ -15,7 +16,6 @@
 				<!-- Logo de GHM -->
 				<a class="ghmLogo" href="#">
 					<span class="icon-logo"></span>
-					<!-- <img src="img/ghmLogo1.png"> -->
 				</a>
 				<!-- Fin de Logo -->
 					
@@ -516,8 +516,7 @@
 			</div>
 			<div class="row">
 				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
-					<!-- <img src="img/ghmLogoFooter.png" alt="GHM Contenidos" class="img"> -->
-					<a href="#"><span class="icon-logoHuevo"></span></a>
+					<a href="#" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
 				</div>
 			</div>
 		</div>
