--- a/index.html
+++ b/index.html
@@ -92,60 +92,24 @@
 	<section class="container-fluid">
 		<div class="row">
 			<div class="col-12 slide-lp">
-				<div class="carousel slide" id="secondary-carousel" data-ride="carousel">
+				<div class="carousel slide" id="primary-carousel" data-ride="carousel">
+
 					<div class="carousel-inner">
 
 						<div class="carousel-item active">
-							<!-- TITULO DELA IMAGEN 1	
-
-							<div class="carousel-caption d-block">
-								<h4>¿Título de la Imagen 1?</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, possimus!</p>
-							</div>
-
-							-->
-							<img src="img/slide1.jpg" alt="">
+							<img class="d-block w-100" src="img/slide1.jpg" alt="">
 						</div>
 
 						<div class="carousel-item">
-							<!-- TITULO DELA IMAGEN 2
-
-							<div class="carousel-caption d-block">
-								<h4>¿Título de la Imagen 2?</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, possimus!</p>
-							</div>
-
-							-->
-							<img src="img/slide2.jpg" alt="">
+							<img class="d-block w-100" src="img/slide2.jpg" alt="">
 						</div>
 
 						<div class="carousel-item">
-							<!-- TITULO DELA IMAGEN 3
-
-	 						<div class="carousel-caption d-block">
-								<h4>¿Título de la Imagen 3?</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, possimus!</p>
-							</div>
-
-							-->
-							<img src="img/slide3.jpg" alt="">
+							<img class="d-block w-100" src="img/slide3.jpg" alt="">
 						</div>
 
 					</div>
 					
-					<!--  Estas son las flechas de Next y Prevs
-
-					<a href="#secondary-carousel" class="carousel-control-prev" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Anterior</span>
-					</a>
-		
-					<a href="#secondary-carousel" class="carousel-control-next" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Siguiente</span>
-					</a>
-
-					-->
 				</div>
 			</div>
 		</div>
@@ -189,7 +153,7 @@
 				<div class="col-12 col-lg-5">
 					<h2 class="titulo">Gustavo Muñoz Lorenzo</h2>
 					<p class="texto">Dirección General</p>
-					<a href="#" class="btn-default">
+					<a href="huevo.html" class="btn-default">
 						<span class="icon-chevron-thin-right"></span>
 						Ver biografía
 					</a>
@@ -444,8 +408,8 @@
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
 					<h6 class="titulo-footer">Home</h6>
 					<ul class="lista-footer">
-						<li><a class="item-footer" href="#.">Acerca de GHM</a></li>
-						<li><a class="item-footer" href="#.">Gustavo Muñoz Lorenzo</a></li>
+						<li><a class="item-footer" href="#">Acerca de GHM</a></li>
+						<li><a class="item-footer" href="huevo.html">Gustavo Muñoz Lorenzo</a></li>
 						<li><a class="item-footer" href="#.">Equipo</a></li>
 						<li><a class="item-footer" href="#.">Clientes</a></li>
 						<li><a class="item-footer" href="#.">Noticias</a></li>
